Fix image rotation mobile

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -22,7 +22,6 @@
 }
 
 .footer__flex {
-   
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -30,6 +29,7 @@
     height: auto;
     margin: 0 auto;
     padding-top: 0.5rem;
+    padding-bottom: 1rem;
     max-width: 1200px;
     flex-wrap: wrap;
 }
