--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -84,7 +84,7 @@
     }
 
     #stories-img{
-        margin-left: -10%;
+        width: auto;
     } 
 
     #img-slider-arrows {
